@@ -39,6 +39,10 @@ https://github.com/networkupstools/nut/milestone/10
 
  - (expected) Bug fixes for fallout possible due to "fightwarn" effort in 2.8.0
 
+ - upsd: fixed conditions for "no listening interface available" diagnosis
+   to check how many listeners we succeeded with, not whether the first one
+   succeeded or not [#723]
+
  - nut-usbinfo.pl, nut-scanner and libnutscan:
    * USB VendorID:ProductID support list files generated by the script for
      different OS frameworks now include a comment with other possibly
